added toggle theme functionality

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
+import Header from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<p>Read more <a href="/secendpage">about</a> Astro!</p>
+<Layout description='' title="Welcome to Astro.">
+
+	<main class="h-full w-full">
+		<p>Read more <a href="/blog">about</a> Astro!</p>
 	</main>
 </Layout>
