--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,9 @@
 ---
 import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout description='' title="Welcome to Astro.">
-
-	<main class="h-full w-full">
-		<p>Read more <a href="/blog">about</a> Astro!</p>
-	</main>
+<Layout description='Full-stack dev.' title="Moncef.">
+<Hero />
 </Layout>
