--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,6 @@ const { title,description } = Astro.props;
 <html lang="en" x-cloak x-data :class="{ 'dark': $store.theme.isDark }" >
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
@@ -22,11 +21,20 @@ const { title,description } = Astro.props;
 		<ViewTransitions />
     
 	</head>
-				<Header />
-
-	<body class="bg-light-50 min-h-screen dark:bg-dark-900 text-light-950 dark:text-dark-50  ">
-		<slot />
+  
+	<body class=" bg-light-50 h-screen transition-all w-full dark:bg-dark-900 text-light-950 dark:text-dark-50  ">
+    <Header />
+    <main class="prose-invert  p-5 rounded-lg prose  prose-table:text-light-100 prose-thead:text-primary-200 pros prose-blockquote:bg-dark-950 prose-blockquote:border-l prose-blockquote:border-primary-500 prose-strong:text-primary-500 prose-headings:text-primary-500 prose-lg prose-img:rounded-lg lg:prose-xl  prose-h1:text-primary-500 prose-h2:text-primary-400 prose-h3:text-primary-400 prose-h4:text-primary-400
+      prose-h5:text-primary-500  prose-h6:text-primary-400 prose-p:text-light-50 prose-a:text-primary-500 
+       mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+      <slot />
+</main>
 		  <style is:global>
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+
+*{
+font-family: 'Montserrat', sans-serif;}
       [x-cloak] {
         display: none !important;
       }
@@ -61,10 +69,6 @@ const { title,description } = Astro.props;
       window.Alpine = Alpine;
       Alpine.start();
     </script>
-
-
-
-
 	</body>
 
 
