--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/Layout.astro';
   title="Not found · Stone"
 >
   <section class="py-16 sm:py-20">
-    <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+    <div class="">
       <div class="flex flex-col items-start gap-8 sm:gap-10">
         <div class="flex flex-col gap-4 sm:gap-6">
           <h1 class="text-4xl font-medium tracking-tight sm:text-5xl lg:text-6xl">
