--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,9 +32,9 @@ const links = [
     class="mx-auto flex max-w-2xl items-baseline justify-between px-4 py-4 sm:px-6 sm:py-6 lg:max-w-7xl lg:px-8"
   >
     <!-- Brand logo -->
-    <strong class="text-4xl font-bold text-primary-500 dark:text-primary-500 ">
+    <a href="/" class="text-4xl font-bold text-primary-500 dark:text-primary-500 ">
       MONCEF
-    </strong>
+    </a>
 
     <!-- Actions -->
     <div class="-mr-2 flex items-center space-x-2 sm:space-x-3">
@@ -128,7 +128,7 @@ const links = [
   right: 0;
   bottom: 0;
   left: 0;
-  background-image: url("des.svg");
+  background-image: url("/des.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
