--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <section class="py-16 w-full flex flex-col">
-    <a href="/blog" class="absolute decoration-transparent right-0 p-5 rounded-l-lg bg-dark-950">
+    <a href="/blog" class="absolute decoration-transparent right-0 p-2 px-6 rounded-l-lg dark:bg-dark-950 bg-white transition-all shadow-sm hover:shadow-md hover:shadow-white shadow-white dark:shadow-dark-950">
         Want to read my Blogs ?
     </a>
 <h1>
