--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,16 +1,28 @@
 ---
+
 ---
-<section class="py-16 w-full flex flex-col">
-    <a href="/blog" class="absolute decoration-transparent right-0 p-2 px-6 rounded-l-lg dark:bg-dark-950 bg-white transition-all shadow-sm hover:shadow-md hover:shadow-white shadow-white dark:shadow-dark-950">
+
+
+<section class="py-16 w-full flex flex-col relative">
+    <a href="/blog" class="absolute decoration-transparent bottom-0  right-0 p-2 px-6 rounded-lg dark:bg-dark-950 bg-white transition-all shadow-sm hover:shadow-md hover:shadow-white shadow-white dark:shadow-dark-950">
         Want to read my Blogs ?
     </a>
-<h1>
-He I'm Moncef 
-</h1>
-<h1>
-full-stack Developer from 
-</h1>
-<h1>
-Algeria
-</h1>
+
+    <main class="flex flex-col">
+
+        <h1 class="sm:text-9xl text-7xl">
+         I'm</h1>
+            <h1 class="sm:text-9xl text-7xl">
+         Moncef</h1>
+        <h2  class="sm:text-5xl text-4xl">
+        Full-Stack Developer
+        </h2>
+    </main>
+    <section class="flex flex-col">
+       
+        <h2  class="sm:text-5xl text-4xl">
+         Skilled in
+        </h2>
+        
+    </section>
 </section>
