playing with font finisehd the hero section and tommorow the last day of it

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -17,7 +17,7 @@ const before = howManyDaysAgo(date.toString())
 
 
     
-    <section id="card" class={`border border-primary-300/50 dark:border-primary-950  overflow-hidden w-[360px] dark:bg-dark-800 bg-white rounded-xl shadow-sm  flex-col flex justify-between `}>
+    <section id="card" class={` border-primary-300/50 dark:border-primary-950  overflow-hidden w-[360px] dark:bg-dark-800 bg-white rounded-xl shadow-sm  flex-col flex justify-between `}>
     <section class="flex flex-col h-full justify-between pt-6">
 <section class="flex flex-col gap-4" >
 
