--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,11 +28,14 @@ const { title,description } = Astro.props;
       <slot />
 </main>
 		  <style is:global>
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600&display=swap'); 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 
+/* *{
+font-family: 'Montserrat', sans-serif;} */
 *{
-font-family: 'Montserrat', sans-serif;}
+font-family: 'Playfair Display', serif;}
       [x-cloak] {
         display: none !important;
       }
