added some changes to the portfolio

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,33 +1,4 @@
 ---
-import Skill from "./Skill.astro";
- const images = [
-    {filename:"typescript.svg",name:"typescript"},
-    {filename:"nextjs.svg",name:"next js"},
-    {filename:"react.svg",name:"react"},
-    {filename:"astrojs.svg",name:"astro js"},
-    {filename:"tauri.svg",name:"tauri"},
-    {filename:"electronjs.svg",name:"electron js"},
-    {filename:"tailwindcss.svg",name:"tailwind css"},
-    {filename:"reactrouter.svg",name:"react router"},
-    {filename:"reduxtoolkit.svg",name:"redux toolkit"},
-    {filename:"reactquery.svg",name:"react query"},
-    {filename:"swr.svg",name:"swr"},
-    {filename:"prisma.svg",name:"prisma"},
-    {filename:"zodlogo.svg",name:"zod"},
-    {filename:"nextauth.webp",name:"next auth"},
-    {filename:"auth0.svg",name:"auth0"},
-    {filename:"nodejs.svg",name:"node js"},
-    {filename:"deno.svg",name:"deno"},
-    {filename:"jwt.svg",name:"jwt"},
-    {filename:"expressjs.svg",name:"express js"},
-    {filename:"nestjs.svg",name:"nest js"},
-    {filename:"sanity.svg",name:"sanity"},
-    {filename:"supabase.svg",name:"supabase"},
-    {filename:"firebase.svg",name:"firebase"},
-    {filename:"mongodb.svg",name:"mongodb"},
-    {filename:"postgressql.svg",name:"postgressql"},
-    {filename:"sqlite.svg",name:"sqlite"},
-  ];
 
 ---
   <style>
@@ -57,13 +28,13 @@ import Skill from "./Skill.astro";
     <a href="/blog" class="absolute decoration-transparent bottom-0  right-0 p-2 px-6 rounded-lg dark:bg-dark-950 bg-white transition-all shadow-sm hover:shadow-md hover:shadow-white shadow-white dark:shadow-dark-950">
         Want to read my Blogs ?
     </a>
-    <main class=" flex flex-col w-full items-center dark:text-primary-50 text-dark-900">
+    <main class="  flex flex-col w-full items-center dark:text-primary-50 text-dark-900">
 
-        <h1 class="sm:text-9xl text-7xl font-bold">
+        <h1 class="coolfont sm:text-9xl text-7xl font-bold">
          I'm</h1>
-            <h1 class="sm:text-9xl text-primary-500 text-7xl font-semibold">
+            <h1 class="coolfont sm:text-9xl text-primary-500 text-7xl font-semibold">
          MONCEF</h1>
-        <h2  class="sm:text-5xl text-4xl">
+        <h2  class="coolfont sm:text-5xl text-4xl">
         Full-Stack Developer
         </h2>
 
@@ -82,13 +53,5 @@ import Skill from "./Skill.astro";
 
 </section>
     </main>
-    <!-- <section class="flex flex-col">
-        <h2  class="sm:text-5xl text-4xl">
-         Skilled in
-        </h2>
-        <section class="flex mt-2 flex-wrap gap-1">
 
-            {images.map(img=> <Skill img={img.filename} name={img.name}/> )}
-        </section>
-    </section> -->
 </main>
