--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
-import Header from '../components/Header.astro';
+import Skills from '../components/Skills.astro';
+import Projects from '../components/Projects.astro';
 import Hero from '../components/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout description='Full-stack dev.' title="Moncef.">
 <Hero />
+<Skills  />
+<Projects />
 </Layout>
