--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,8 +29,13 @@ const { title,description } = Astro.props;
 </main>
 		  <style is:global>
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600&display=swap'); 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
-
+@font-face {
+  font-family: 'Vultura';
+  src: url('/fonts/Vultura.ttf') format('ttf');
+  font-weight: normal;
+  font-style: serif;
+  font-display: swap;
+}
 
 /* *{
 font-family: 'Montserrat', sans-serif;} */
@@ -39,6 +44,14 @@ font-family: 'Playfair Display', serif;}
       [x-cloak] {
         display: none !important;
       }
+::selection {
+    background: #111111;
+    color:#b3ac9d
+}
+      .coolfont{
+font-family: 'Vultura';   
+
+   }
     </style>
    <script>
       import Alpine from 'alpinejs';
