--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,13 +18,13 @@
 }
   </style>
 
-<div class="fixed inset-0 backdrop-blur-xl h-screen w-full  -z-10 flex justify-center items-center">
-</div>
-<div class="fixed inset-0  h-screen w-full  -z-20 flex justify-center items-center">
-    <img src="./des.svg" class=" back  fixed  " alt="">
+<!-- <div class="absolute inset-0 top-16 backdrop-blur-xl h-screen w-full  -z-10 flex justify-center items-center">
+</div> -->
+<div class="hidden dark:absolute inset-0 backdrop-blur-xl  h-screen w-full  -z-20 dark:flex justify-center items-center">
+    <img src="./des.svg" class=" back    " alt="">
 </div>
 
-<main class="py-16 w-full    flex flex-col justify-center items-center relative">
+<main class="py-16 w-full h-[80vh]   flex flex-col justify-center items-center relative">
     <a href="/blog" class="absolute decoration-transparent bottom-0  right-0 p-2 px-6 rounded-lg dark:bg-dark-950 bg-white transition-all shadow-sm hover:shadow-md hover:shadow-white shadow-white dark:shadow-dark-950">
         Want to read my Blogs ?
     </a>
