--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,9 +21,9 @@ const { title,description } = Astro.props;
     
 	</head>
   
-	<body class=" bg-light-50 h-screen transition-all w-full dark:bg-dark-900 text-light-950 dark:text-dark-50  ">
+	<body class=" bg-light-50 overflow-x-hidden h-screen transition-all w-full dark:bg-dark-900 text-light-950 dark:text-dark-50  ">
     <Header />
-    <main class=" py-10
+    <main class=" py-10 overflow-x-hidden
        mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
       <slot />
 </main>
@@ -50,8 +50,11 @@ font-family: 'Playfair Display', serif;}
 }
       .coolfont{
 font-family: 'Vultura';   
-
    }
+
+
+   
+
     </style>
    <script>
       import Alpine from 'alpinejs';
