added the footer and somethings

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 ---
-<footer class="bg-stone-50  dark:bg-dark-950 w-full ">
 
+<footer class="bg-stone-50    dark:bg-dark-950 w-full ">
+the footer
 </footer>
