--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,17 +8,16 @@
 
 
     <section class="flex flex-col items-center justify-center mt-10 gap-6">
-        <p class="text-2xl">
-            want to see my skills ?
-        </p>
-        <button class="text-sm w-full flex-col justify-center items-center gap-2">
-               <p class="text-2xl w-full text-center">
-               Go down
-           </p>
-           <div class="flex justify-center items-center w-full animate-bounce mt-6">
-    
-    <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" fill="rgb(185 143 68)" viewBox="0 0 256 256"><path d="M208,48l-80,80L48,48Z" opacity="0.2"></path><path d="M213.66,133.66l-80,80a8,8,0,0,1-11.32,0l-80-80a8,8,0,0,1,11.32-11.32L128,196.69l74.34-74.35a8,8,0,0,1,11.32,11.32Zm-171.32-80A8,8,0,0,1,48,40H208a8,8,0,0,1,5.66,13.66l-80,80a8,8,0,0,1-11.32,0Zm25,2.34L128,116.69,188.69,56Z"></path></svg>    </button>
-    
+        <p class="text-2xl w-full text-center">
+Want to collaborate?          
+</p>
+        <a href="/contact" transition:name="contact" class="text-lg group transition-all duration-75  bg-primary-500 text-light-100  dark:text-dark-500 dark:hover:text-dark-950 hover:text-light-50 flex  w-full p-2 px-4  rounded-xl  justify-center items-center gap-2">
+<p>Contact me </p>
+            <svg xmlns="http://www.w3.org/2000/svg"
+             width="20" height="20"
+               class="transition-all fill-light-50 dark:fill-dark-900 opacity-0 group-hover:opacity-100 duration-75 delay-100 group-hover:rotate-12"
+                viewBox="0 0 256 256"><path d="M224,96l-78.55,56h-34.9L32,96l96-64Z" opacity="0.2"></path><path d="M228.44,89.34l-96-64a8,8,0,0,0-8.88,0l-96,64A8,8,0,0,0,24,96V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V96A8,8,0,0,0,228.44,89.34ZM96.72,152,40,192V111.53Zm16.37,8h29.82l56.63,40H56.46Zm46.19-8L216,111.53V192ZM128,41.61l81.91,54.61-67,47.78H113.11l-67-47.78Z"></path></svg>
+  </a>
     
     </section>
 
