--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -49,8 +49,8 @@ import Skill from "./Skill.astro";
     <p class="text-2xl">
         What I buit ?
     </p>
-    <button class="text-sm w-full flex-col justify-center items-center gap-2">
-       <div class="flex justify-center items-center w-full animate-bounce mt-6">
+    <button class="text-sm w-full flex-col justify-center items-center">
+       <div class="flex justify-center items-center w-full animate-bounce ">
 
 <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" fill="rgb(185 143 68)" viewBox="0 0 256 256"><path d="M208,48l-80,80L48,48Z" opacity="0.2"></path><path d="M213.66,133.66l-80,80a8,8,0,0,1-11.32,0l-80-80a8,8,0,0,1,11.32-11.32L128,196.69l74.34-74.35a8,8,0,0,1,11.32,11.32Zm-171.32-80A8,8,0,0,1,48,40H208a8,8,0,0,1,5.66,13.66l-80,80a8,8,0,0,1-11.32,0Zm25,2.34L128,116.69,188.69,56Z"></path></svg>    </button>
 
