--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 --- 
 import { ViewTransitions } from 'astro:transitions';
 import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro';
 type Props= {
 	  description: string;
 	title: string;
@@ -23,10 +24,14 @@ const { title,description } = Astro.props;
   
 	<body class=" bg-light-50 overflow-x-hidden h-screen transition-all w-full dark:bg-dark-900 text-light-950 dark:text-dark-50  ">
     <Header />
-    <main class=" py-10 overflow-x-hidden
-       mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-      <slot />
-</main>
+    <main class="bg-light-50 overflow-x-hidden  transition-all w-full dark:bg-dark-900 text-light-950 dark:text-dark-50 ">
+      <main class=" py-10 overflow-x-hidden 
+         mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+        <slot />
+      </main>
+
+    </main>
+    <Footer />
 		  <style is:global>
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600&display=swap'); 
 @font-face {
