--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,73 @@
 ---
+
+const socials = {
+github: {
+name: "Github",
+link:"https://github.com/modecode22",
+},
+facebook:{
+name: "Facebook",
+link:"https://www.facebook.com/profile.php?id=100090251763624",
+},
+linkedin:{
+name: "Linkedin",
+link:"https://www.linkedin.com/in/moncef-aissaoui-62a486269/",
+}
+
+
+} 
+
+
 ---
 
-<footer class="bg-stone-50    dark:bg-dark-950 w-full ">
-the footer
-</footer>
+    <footer class="relative p-5   w-full flex justify-center items-end">
+
+    
+
+
+
+
+  <section class="flex flex-col gap-2 p-2 rounded-2xl   shadow-md shadow-primary-950 bg-gradient-to-br from-dark-950  via-primary-950 to-primary-900 backdrop-blur-2xl ">
+  <nav class="flex justify-center items-center gap-5 mb-2">
+      <a href={socials.github.link} title={socials.github.name} target="_blank" class="flex flex-col items-center justify-center bg-gradient-to-br from-dark-900 via-dark-800 to-dark-700 p-1 rounded-full w-9 h-9 group  transition-all" >
+      <svg class={"fill-primary-700 group-hover:fill-primary-500"} xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 256 256"><path d="M208,104v8a48,48,0,0,1-48,48H136a32,32,0,0,1,32,32v40H104V192a32,32,0,0,1,32-32H112a48,48,0,0,1-48-48v-8a49.28,49.28,0,0,1,8.51-27.3A51.92,51.92,0,0,1,76,32a52,52,0,0,1,43.83,24h32.34A52,52,0,0,1,196,32a51.92,51.92,0,0,1,3.49,44.7A49.28,49.28,0,0,1,208,104Z" opacity="0.2"></path><path d="M208.3,75.68A59.74,59.74,0,0,0,202.93,28,8,8,0,0,0,196,24a59.75,59.75,0,0,0-48,24H124A59.75,59.75,0,0,0,76,24a8,8,0,0,0-6.93,4,59.78,59.78,0,0,0-5.38,47.68A58.14,58.14,0,0,0,56,104v8a56.06,56.06,0,0,0,48.44,55.47A39.8,39.8,0,0,0,96,192v8H72a24,24,0,0,1-24-24A40,40,0,0,0,8,136a8,8,0,0,0,0,16,24,24,0,0,1,24,24,40,40,0,0,0,40,40H96v16a8,8,0,0,0,16,0V192a24,24,0,0,1,48,0v40a8,8,0,0,0,16,0V192a39.8,39.8,0,0,0-8.44-24.53A56.06,56.06,0,0,0,216,112v-8A58,58,0,0,0,208.3,75.68ZM200,112a40,40,0,0,1-40,40H112a40,40,0,0,1-40-40v-8a41.74,41.74,0,0,1,6.9-22.48A8,8,0,0,0,80,73.83a43.81,43.81,0,0,1,.79-33.58,43.88,43.88,0,0,1,32.32,20.06A8,8,0,0,0,119.82,64h32.35a8,8,0,0,0,6.74-3.69,43.87,43.87,0,0,1,32.32-20.06A43.81,43.81,0,0,1,192,73.83a8.09,8.09,0,0,0,1,7.65A41.76,41.76,0,0,1,200,104Z"></path></svg>
+    </a>   
+       <a href={socials.facebook.link} title={socials.facebook.name} target="_blank" class="flex flex-col items-center justify-center bg-gradient-to-br from-dark-900 via-dark-800 to-dark-700 p-1 rounded-full w-9 h-9 group  transition-all" >
+<svg class={"fill-primary-700 group-hover:fill-primary-500"} xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 256 256"><path d="M224,128a96,96,0,1,1-96-96A96,96,0,0,1,224,128Z" opacity="0.2"></path><path d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm8,191.63V152h24a8,8,0,0,0,0-16H136V112a16,16,0,0,1,16-16h16a8,8,0,0,0,0-16H152a32,32,0,0,0-32,32v24H96a8,8,0,0,0,0,16h24v63.63a88,88,0,1,1,16,0Z"></path></svg>    </a>   
+       <a href={socials.linkedin.link} title={socials.linkedin.name} target="_blank" class="flex flex-col items-center justify-center bg-gradient-to-br from-dark-900 via-dark-800 to-dark-700 p-1 rounded-full w-9 h-9 group  transition-all" >
+<svg class={"fill-primary-700 group-hover:fill-primary-500"} xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 256 256"><path d="M224,40V216a8,8,0,0,1-8,8H40a8,8,0,0,1-8-8V40a8,8,0,0,1,8-8H216A8,8,0,0,1,224,40Z" opacity="0.2"></path><path d="M216,24H40A16,16,0,0,0,24,40V216a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V40A16,16,0,0,0,216,24Zm0,192H40V40H216V216ZM96,112v64a8,8,0,0,1-16,0V112a8,8,0,0,1,16,0Zm88,28v36a8,8,0,0,1-16,0V140a20,20,0,0,0-40,0v36a8,8,0,0,1-16,0V112a8,8,0,0,1,15.79-1.78A36,36,0,0,1,184,140ZM100,84A12,12,0,1,1,88,72,12,12,0,0,1,100,84Z"></path></svg>    </a>   
+
+    </nav>
+
+<section class="flex justify-center items-center gap-2">
+
+  <h3>Built By</h3>
+  <a href="/" target="_blank" class="
+hover:underline text-primary-600 hover:text-primary-500 duration-100 transition-all hover:decoration-solid decoration-1 decoration-primary-500 " href={"https://moncefdev.vercel.app"}>
+  Moncef Aissaoui
+  </a>
+  <h3>with</h3>
+  </section>
+  <section class="flex justify-center items-center gap-2">
+     <img 
+        alt='next js' 
+        class=' w-7 h-7' 
+        src={"/skills/tailwindcss.svg"}  
+        /> 
+        &
+        <img 
+        alt='Astro js' 
+        class=' w-5 h-5' 
+        src={"/skills/astrojs.svg"}  
+        /> &
+      <svg xmlns="http://www.w3.org/2000/svg" class='w-6 h-6 fill-orange-500' viewBox="0 0 256 256"><path d="M208,144a80,80,0,0,1-160,0c0-30.57,14.42-58.26,31-80l33,32,26.27-72C159.86,41.92,208,88.15,208,144Z" opacity="0.2"></path><path d="M183.89,153.34a57.6,57.6,0,0,1-46.56,46.55A8.75,8.75,0,0,1,136,200a8,8,0,0,1-1.32-15.89c16.57-2.79,30.63-16.85,33.44-33.45a8,8,0,0,1,15.78,2.68ZM216,144a88,88,0,0,1-176,0c0-27.92,11-56.47,32.66-84.85a8,8,0,0,1,11.93-.89l24.12,23.41,22-60.41a8,8,0,0,1,12.63-3.41C165.21,36,216,84.55,216,144Zm-16,0c0-46.09-35.79-85.92-58.21-106.33L119.52,98.74a8,8,0,0,1-13.09,3L80.06,76.16C64.09,99.21,56,122,56,144a72,72,0,0,0,144,0Z"></path></svg>  
+
+    </section>
+</section>
+
+  </footer>   
+
+
+
+
+   
