--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -16,20 +16,22 @@ const { data:{date,description,img,title,link,tech},slug } = Astro.props;
 
 
 
-<section class=" bg-white group relative w-[330px] h-[440px] rounded-xl dark:bg-dark-950 ">
+<section class=" bg-white group relative w-[330px] h-[440px] rounded-xl dark:bg-dark-800 flex flex-col ">
 <section class="p-4 flex justify-between items-center">
     <h3 class="">{title}</h3>
 <section>
     {date}
 </section>
 </section>
-<img transition:name={title} src={img} alt={title}>
-<section class="flex-1 flex flex-col p-4 gap-2 justify-between">
+<img transition:name={slug} src={img} alt={title}>
+<section class=" flex flex-col  p-4  justify-between flex-1  w-full">
     <p class="line-clamp-2">{description}</p>
-    <p class="line-clamp-2 text-sm">
-        Built with : {tech}
+    <p class="line-clamp-2 text-sm ">
+        Built with : <strong class="text-primary-400">
+            {tech} 
+        </strong> 
     </p>
-    <section class="flex gap-4">
+    <section class="flex gap-2 pt-4">
         <a class="bg-primary-500 text-dark-950 rounded-xl px-2 p-1" target="_blank" href={link} >
            website
         </a>
