changes some text colors

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -8,7 +8,7 @@ const allProjects = await getCollection('projects');
 
 
 
-<section class="min-h-screen w-full flex flex-col justify-center items-center">
+<section class="dark:text-light-600 text-primary-700 min-h-screen w-full flex flex-col justify-center items-center">
 
 
   <main>
