--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -36,9 +36,9 @@ import Skill from "./Skill.astro";
 
 
 
-<section class="h-screen w-full flex justify-center items-center">
+<section class="h-screen w-full flex justify-center items-center dark:text-primary-200 text-primary-700">
     <section class="flex flex-col">
-        <h2  class="sm:text-5xl text-4xl">
+        <h2  class="sm:text-5xl text-4xl ">
          Skilled in
         </h2>
         <section class="flex mt-2 flex-wrap gap-2">
