--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,18 +3,18 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout description='Full-stack dev.' title="Moncef.">
-    <section class="text-5xl pb-6">
+    <section class="text-5xl pb-6 dark:text-primary-50 text-dark-900">
 Contact me
     </section>
       <main  transition:name="contact" class="  flex-1 bg-primary-500 w-full h-full rounded-xl  p-6">
         <form method="POST" class="flex flex-col w-full gap-4">
       <div class="flex flex-col sm:flex-row justify-center items-center w-full gap-4">
-        <input class="w-full rounded-lg h-12 px-2 bg-primary-800 placeholder:text-light-100 " type="text" name="name" placeholder="Name" />
-            <input type="email" class="w-full rounded-lg h-12 px-2 bg-primary-800 placeholder:text-light-100" name="email" placeholder="Email" />
+        <input class="w-full rounded-lg h-12 px-2 bg-primary-600 placeholder:text-light-100 " type="text" name="name" placeholder="Name" />
+            <input type="email" class="w-full rounded-lg h-12 px-2 bg-primary-600 placeholder:text-light-100" name="email" placeholder="Email" />
         </div>
       </div>
       <div>
-        <textarea class="w-full rounded-lg h-36 resize-y px-2 bg-primary-800 placeholder:text-light-100" name="message" placeholder="Message"></textarea>
+        <textarea class="w-full rounded-lg h-36 resize-y px-2 bg-primary-600 placeholder:text-light-100" name="message" placeholder="Message"></textarea>
       </div>
       <div>
         <button  class="h-12 w-full rounded-xl bg-light-50 dark:bg-dark-900 dark:text-light-50 text-dark-900" type="submit">Send</button>
