fixied the hight issue that related with footer

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title,description } = Astro.props;
     
 	</head>
   
-	<body class=" bg-light-50 overflow-x-hidden h-screen transition-all w-full dark:bg-dark-900 text-light-950 dark:text-dark-50  ">
+	<body class=" bg-light-50 overflow-x-hidden min-h-screen flex flex-col justify-between transition-all w-full dark:bg-dark-900 text-light-950 dark:text-dark-50  ">
     <Header />
     <main class="bg-light-50 overflow-x-hidden  transition-all w-full dark:bg-dark-900 text-light-950 dark:text-dark-50 ">
       <main class=" py-10 overflow-x-hidden 
