--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -11,7 +11,8 @@ export async function getStaticPaths() {
   }));
 }
 
-type Props = {
+
+type Props =  {
     entry: {
     id: string;
     slug: string;
@@ -44,7 +45,7 @@ console.log(entry.data.img);
 
 <BlogLayout title={entry.data.title} description={entry.data.description} >
   <h1>{entry.data.title}</h1>
-  <img transition:name={entry.slug} src={entry.data.img} class=" py-2 m-0 " alt="this is an image ">
+  <img transition:name={entry.slug} src={entry.data.img} class="" alt="this is an image ">
   <h5 class="pb-6">{remarkPluginFrontmatter.minutesRead}</h5>
   <Content />
 </BlogLayout>
