--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -11,7 +11,7 @@ const allProjects = await getCollection('projects');
 <section class="dark:text-light-600 text-primary-700 min-h-screen w-full flex flex-col justify-center items-center">
 
 
-  <main>
+  <main class="flex flex-col gap-6">
    {
         allProjects.map((project)=>{
             return <ProjectCard data={project.data} slug={project.slug}  /> 
