added the scroll functionlity by id

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -42,7 +42,7 @@
     <p class="text-2xl">
         want to see my skills ?
     </p>
-    <button class="text-sm w-full flex-col justify-center items-center gap-2">
+    <a href="#skills" class="text-sm w-full flex-col justify-center items-center gap-2">
            <p class="text-2xl w-full text-center">
            Go down
        </p>
